# serializer version: 1
# name: Test_ExtendedDeviceEntry.test_to_dict
  dict({
    'area_id': 'device_area',
    'floor_name': 'device floor',
    'labels': list([
      'device label 1',
      'device label 2',
      'device label 3',
    ]),
    'name': 'device name',
  })
# ---
# name: Test_ExtendedDeviceEntry.test_to_flattened_dict
  dict({
    'area.id': 'device_area',
    'area.name': 'device area',
    'floor.floor_id': 'device_floor',
    'floor.name': 'device floor',
    'labels': list([
      'device label 1',
      'device label 2',
      'device label 3',
    ]),
    'name': 'device name',
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area and floor-With device no area and floor]
  dict({
    'flattened': dict({
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area and floor-With device no area, floor, or labels]
  dict({
    'flattened': dict({
      'device.labels': list([
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area and floor-With device no floor]
  dict({
    'flattened': dict({
      'area.id': 'device_area',
      'area.name': 'device area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area and floor-With device]
  dict({
    'flattened': dict({
      'area.id': 'device_area',
      'area.name': 'device area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.floor.floor_id': 'device_floor',
      'device.floor.name': 'device floor',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'floor.floor_id': 'device_floor',
      'floor.name': 'device floor',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': 'device floor',
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area and floor-With no device]
  dict({
    'flattened': dict({
      'device.labels': list([
      ]),
      'device.name': 'ES Integration',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': None,
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area, floor, or labels-With device no area and floor]
  dict({
    'flattened': dict({
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': None,
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area, floor, or labels-With device no area, floor, or labels]
  dict({
    'flattened': dict({
      'device.labels': list([
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': None,
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area, floor, or labels-With device no floor]
  dict({
    'flattened': dict({
      'area.id': 'device_area',
      'area.name': 'device area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': None,
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area, floor, or labels-With device]
  dict({
    'flattened': dict({
      'area.id': 'device_area',
      'area.name': 'device area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.floor.floor_id': 'device_floor',
      'device.floor.name': 'device floor',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'floor.floor_id': 'device_floor',
      'floor.name': 'device floor',
      'labels': list([
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': 'device floor',
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': None,
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no area, floor, or labels-With no device]
  dict({
    'flattened': dict({
      'device.labels': list([
      ]),
      'device.name': 'ES Integration',
      'device_class': 'entity device class',
      'labels': list([
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': None,
    }),
    'source_entity': dict({
      'entity_area_name': None,
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': None,
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no floor-With device no area and floor]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no floor-With device no area, floor, or labels]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.labels': list([
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no floor-With device no floor]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no floor-With device]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.floor.floor_id': 'device_floor',
      'device.floor.name': 'device floor',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': 'device floor',
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity no floor-With no device]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.labels': list([
      ]),
      'device.name': 'ES Integration',
      'device_class': 'entity device class',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': None,
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': None,
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity-With device no area and floor]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'floor.floor_id': 'entity_floor',
      'floor.name': 'entity floor',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': 'entity floor',
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity-With device no area, floor, or labels]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.labels': list([
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'floor.floor_id': 'entity_floor',
      'floor.name': 'entity floor',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': 'entity floor',
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity-With device no floor]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'floor.floor_id': 'entity_floor',
      'floor.name': 'entity floor',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': None,
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': 'entity floor',
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity-With device]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.area.id': 'device_area',
      'device.area.name': 'device area',
      'device.floor.floor_id': 'device_floor',
      'device.floor.name': 'device floor',
      'device.labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device.name': 'device name',
      'device_class': 'entity device class',
      'floor.floor_id': 'entity_floor',
      'floor.name': 'entity floor',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': 'device area',
      'device_floor_name': 'device floor',
      'device_labels': list([
        'device label 1',
        'device label 2',
        'device label 3',
      ]),
      'device_name': 'device name',
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': 'entity floor',
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_entity_device_combinations[With entity-With no device]
  dict({
    'flattened': dict({
      'area.id': 'entity_area',
      'area.name': 'entity area',
      'device.labels': list([
      ]),
      'device.name': 'ES Integration',
      'device_class': 'entity device class',
      'floor.floor_id': 'entity_floor',
      'floor.name': 'entity floor',
      'labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
      'name': None,
      'platform': 'entity platform',
    }),
    'source_device': dict({
      'device_area_name': None,
      'device_floor_name': None,
      'device_labels': None,
      'device_name': None,
    }),
    'source_entity': dict({
      'entity_area_name': 'entity area',
      'entity_floor_name': 'entity floor',
      'entity_id': 'entity_object_id',
      'entity_labels': list([
        'entity label 1',
        'entity label 2',
        'entity label 3',
      ]),
    }),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_to_dict
  dict({
    'area_id': 'entity_area',
    'entity_id': 'counter.entity_object_id',
    'floor_name': 'entity floor',
    'labels': list([
      'entity label 1',
      'entity label 2',
      'entity label 3',
    ]),
  })
# ---
# name: Test_ExtendedRegistryEntry.test_to_flattened_dict
  dict({
    'area.id': 'entity_area',
    'area.name': 'entity area',
    'device.area.id': 'device_area',
    'device.area.name': 'device area',
    'device.floor.floor_id': 'device_floor',
    'device.floor.name': 'device floor',
    'device.labels': list([
      'device label 1',
      'device label 2',
      'device label 3',
    ]),
    'device.name': 'device name',
    'device_class': 'entity device class',
    'floor.floor_id': 'entity_floor',
    'floor.name': 'entity floor',
    'labels': list([
      'entity label 1',
      'entity label 2',
      'entity label 3',
    ]),
    'name': None,
    'platform': 'entity platform',
  })
# ---
